# cfd-verify

./: .readthedocs.yaml  LICENSE  README.rst  pyproject.toml
docs/source/: conf.py
src/cfdverify/: discretization.py
