[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfdverify"
version = "0.0.1"
authors = [
  { name="Justin Weinmeister", email="weinmeistejr@ornl.gov" },
]
description = "A package to conduct solution verification for CFD"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://code-int.ornl.gov/14w/cfd-verify"
Issues = "https://code-int.ornl.gov/14w/cfd-verify/-/issues"

[project.optional-dependencies]
tests = [
  "pytest",
]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
]
full = [
    "cfdverify[tests, docs]",
]